[gd_scene load_steps=10 format=3 uid="uid://6se4ghde6e11"]

[ext_resource type="Script" uid="uid://ho3f874ellsq" path="res://objects/player/ui/active_item_ui/active_item_ui.gd" id="1_nx2ar"]
[ext_resource type="Texture2D" uid="uid://b4dhbksujd1xn" path="res://ui_assets/player_ui/active_item_ui/ActiveMeter_Empty.png" id="2_llx8c"]
[ext_resource type="Texture2D" uid="uid://b25ibtsngmph0" path="res://ui_assets/player_ui/active_item_ui/ActiveMeter_Progress.png" id="3_ebye2"]
[ext_resource type="Texture2D" uid="uid://1qjww3ppeo3x" path="res://ui_assets/player_ui/active_item_ui/active_item_outline.png" id="5_hphg3"]
[ext_resource type="Texture2D" uid="uid://dp60mor8isqvc" path="res://ui_assets/battle/gags/tt_t_gui_bat_pass.png" id="6_ec686"]
[ext_resource type="Texture2D" uid="uid://dsc42ovo662p0" path="res://ui_assets/misc/active_keyicon.png" id="7_ec686"]
[ext_resource type="AudioStream" uid="uid://dser2xm1ffnqk" path="res://audio/sfx/ui/clock09.ogg" id="7_fcafq"]
[ext_resource type="FontFile" uid="uid://815gwlftl5ik" path="res://fonts/impress-bt.ttf" id="8_4tpxl"]

[sub_resource type="LabelSettings" id="LabelSettings_soyk2"]
font = ExtResource("8_4tpxl")
font_size = 24

[node name="ActiveItemUI" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -41.0
offset_top = -45.0
offset_right = 61.0
offset_bottom = 45.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nx2ar")

[node name="Scaler" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.1, 0.1)

[node name="ProgressBar" type="TextureProgressBar" parent="Scaler"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -454.0
offset_top = -454.0
offset_right = 454.0
offset_bottom = 454.0
grow_horizontal = 2
grow_vertical = 2
max_value = 2.0
step = 0.001
fill_mode = 4
texture_under = ExtResource("2_llx8c")
texture_progress = ExtResource("3_ebye2")
tint_progress = Color(0.811765, 0.447059, 0.913725, 1)

[node name="TickOrigin" type="Control" parent="Scaler"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Overlay" type="TextureRect" parent="Scaler"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -488.0
offset_top = -488.0
offset_right = 490.0
offset_bottom = 490.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_hphg3")
expand_mode = 1

[node name="ItemIcon" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -30.0
offset_right = 30.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1

[node name="Denycon" type="TextureRect" parent="."]
unique_name_in_owner = true
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -37.0
offset_top = -37.0
offset_right = 37.0
offset_bottom = 37.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_ec686")
expand_mode = 1

[node name="FailSoundSFX" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("7_fcafq")

[node name="KeyInput" type="TextureRect" parent="."]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.9)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -38.0
offset_top = -38.0
offset_right = 10.0
offset_bottom = 10.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("7_ec686")
expand_mode = 1

[node name="KeyLabel" type="Label" parent="KeyInput"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -15.5
offset_top = -11.5
offset_right = 15.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Q"
label_settings = SubResource("LabelSettings_soyk2")
horizontal_alignment = 1
vertical_alignment = 1
